force-app/main/default/objects/Account/fields/of_contacts__c.field-meta.xml
<CustomField>
    <fullName>of_contacts__c</fullName>
    <label># of contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>