force-app/main/default/objects/Account/fields/of_contracts__c.field-meta.xml
<CustomField>
    <fullName>of_contracts__c</fullName>
    <label># of contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>